--- a/index.html
+++ b/index.html
@@ -199,14 +199,14 @@
         </div>
 
         <div class="question-block">
-            <label for="open-ended-q8">(h) 黃色閃爍圓形燈號：</label>
-            <textarea id="open-ended-q8" rows="4" cols="50" placeholder="請輸入您的回答... (非必填)"></textarea>
+            <label for="open-ended-q1">(a) 綠色圓形+黃色閃爍箭頭燈號：</label>
+            <textarea id="open-ended-q1" rows="4" cols="50" placeholder="請輸入您的回答... (非必填)"></textarea>
             <span class="required">*必填簡答:</span>
-            <select id="understand8" name="understand8" required>
-                <option value="">選擇理解度</option>
-                <option value="easy">易懂</option>
-                <option value="confuse">使人困惑</option>
-            </select>
+            <div id="understand1-options" class="button-options">
+                <button type="button" onclick="selectUnderstand('easy', 1)">易懂</button>
+                <button type="button" onclick="selectUnderstand('confuse', 1)">使人困惑</button>
+            </div>
+            <input type="hidden" id="understand1" name="understand1" required>
         </div>
     
         <button id="submit-open-ended-button">提交並查看結果</button>
