--- a/index.html
+++ b/index.html
@@ -66,11 +66,13 @@
         </button>
         <div class="rules"></div>
             <h2>測驗規則</h2>
-            <ol>
+        
+            <ol style="text-align: left;">
                 <li>總共22題，每題均為判斷左轉行為決策的單選擇題</li>
                 <li>進入題目頁面後，駕駛模擬影片會自動播放</li>
                 <li>影片播放前3秒固定為紅燈時相，紅燈結束後依顯示號誌點擊選項按鈕作答</li>
             </ol>
+
             <table class="styled-table">
                 <tr>
                     <td>&nbsp;</td><td>主要號誌</td><td>左轉專用號誌</td><td>號誌含意</td>
