--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
         <button id="start-button">
             <span class="material-icons">play_arrow</span> 開始測驗
         </button>
-        <div class="rules"></div>
+        <div class="rules" style="text-align: left;">
             <h2>測驗規則</h2>
-        
-            <ol style="text-align: left;">
+            <ol>
                 <li>總共22題，每題均為判斷左轉行為決策的單選擇題</li>
                 <li>進入題目頁面後，駕駛模擬影片會自動播放</li>
                 <li>影片播放前3秒固定為紅燈時相，紅燈結束後依顯示號誌點擊選項按鈕作答</li>
             </ol>
+
 
             <table class="styled-table">
                 <tr>
