--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
             <table class="styled-table">
                 <tr>
-                    <td>&nbsp;</td><td>主要號誌</td><td>左轉專用號誌</td><td>號誌含意</td>
+                    <td>&nbsp;</td><td>主要號誌</td><td>圖</td><td>左轉專用號誌</td><td>圖</td><td>號誌含意</td>
                 </tr>
                 <tr>
                     <td>(a)</td><td>綠色圓形</td><td>黃色閃爍箭頭</td><td>可左轉(需讓行)</td>
