--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <td>(g)</td><td>紅色閃爍圓形</td><td>(無)</td><td>可左轉(需讓行)</td>
                 </tr>
                 <tr>
-                    <td>(h)</td><td>黃色閃爍圓形</td><td>(無)</td><td>可左轉(需讓行)</td>
+                    <td>(h)</td><td>黃色閃爍圓形</td><td><img src="閃黃燈.gif" alt="主要號誌 (h)" style="width: 50px;"></td><td>(無)</td><td>可左轉(需讓行)</td>
                 </tr>
                 <tr>
                     <td>(i)</td><td>黃色閃爍圓形</td><td>紅色圓形</td><td>不可左轉</td>
