--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
                     <td>(f)</td><td>紅色圓形</td><td>綠色長亮箭頭</td><td>保護型左轉(不需讓行)</td>
                 </tr>
                 <tr>
-                    <td>(g)</td><td>紅色閃爍圓形</td><td>(無)</td><td>可左轉(需讓行)</td>
+                    <td>(g)</td><td>紅色閃爍圓形</td><td><img src="閃紅燈.gif" alt="主要號誌 (g)" style="width: 50px;"></td><td>(無)</td><td>(無)</td><td>可左轉(需讓行)</td>
                 </tr>
                 <tr>
-                    <td>(h)</td><td>黃色閃爍圓形</td><td><img src="閃黃燈.gif" alt="主要號誌 (h)" style="width: 50px;"></td><td>(無)</td><td>可左轉(需讓行)</td>
+                    <td>(h)</td><td>黃色閃爍圓形</td><td><img src="閃黃燈.gif" alt="主要號誌 (h)" style="width: 50px;"></td><td>(無)</td><td>(無)</td><td>可左轉(需讓行)</td>
                 </tr>
                 <tr>
-                    <td>(i)</td><td>黃色閃爍圓形</td><td>紅色圓形</td><td>不可左轉</td>
+                    <td>(i)</td><td>黃色閃爍圓形</td><td><img src="閃黃燈.gif" alt="主要號誌 (i)" style="width: 50px;"></td><td>紅色圓形</td><td><img src="四項_直式_紅圓.jpg" alt="左轉號誌 (i)" style="width: 50px;"><td>不可左轉</td>
                 </tr>
                 <tr>
                     <td>(j)</td><td>綠色圓形</td><td>紅色圓形</td><td>不可左轉</td>
