--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <td>(e)</td><td>綠色圓形</td><td><img src="三相_橫式_綠圓.jpg" alt="主要號誌 (e)" style="width: 50px;"></td><td>(無)</td><td>(無)</td><td>可左轉(需讓行)</td>
                 </tr>
                 <tr>
-                    <td>(f)</td><td>紅色圓形</td><td><img src="三相_橫式_紅圓.jpg" alt="主要號誌 (f)" style="width: 50px;"></td><td>綠色長亮箭頭</td><td><img src="四相_直式_綠色箭頭.jpg" alt="左轉號誌 (f)" style="width: 15px;"></td><td>保護型左轉(不需讓行)</td>
+                    <td>(f)</td><td>紅色圓形</td><td><img src="三相_橫式_紅燈.jpg" alt="主要號誌 (f)" style="width: 50px;"></td><td>綠色長亮箭頭</td><td><img src="四相_直式_綠色箭頭.jpg" alt="左轉號誌 (f)" style="width: 15px;"></td><td>保護型左轉(不需讓行)</td>
                 </tr>
                 <tr>
                     <td>(g)</td><td>紅色閃爍圓形</td><td><img src="閃紅燈.gif" alt="主要號誌 (g)" style="width: 50px;"></td><td>(無)</td><td>(無)</td><td>可左轉(需讓行)</td>
