--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
     <link rel="stylesheet" href="styles-mobile.css" media="screen and (max-width: 767px)">
 </head> 
 <body>
+
+    <div id="survey-intro">
+        <h1>駕駛人行為測驗問卷說明</h1>
+        <p>歡迎參與我們的駕駛人行為測驗問卷！</p>
+        <p>本問卷是基於國立陽明交通大學運輸與物流管理學系的畢業專題研究，旨在探討台灣駕駛人對不同左轉號誌設計的理解程度及其對駕駛行為的影響。您的回答將幫助我們提高交通安全，並優化未來的左轉號誌設計。</p>
+        <h2>個人資料保護聲明</h2>
+        <p>在參與問卷的過程中，我們會確保您的個人資料安全。所有收集的資料僅供本次研究使用，並且會以匿名的方式進行處理。我們不會將任何個人資料洩露給第三方，且所有資料在研究結束後將被妥善銷毀。請放心，您的隱私和個人資料是我們首要關注的事項。</p>
+        <button id="agree-button">我已閱讀並同意以上說明，開始填寫問卷</button>
+    </div>
+
+
+    
     <div id="basic-info-form">
         <h1>駕駛人基本資料</h1>
         <form id="basic-info-form" method="POST">
