--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                 <li>總共22題，每題均為判斷左轉行為決策的單選擇題</li>
                 <li>進入題目頁面後，駕駛模擬影片會自動播放</li>
                 <li>影片播放前3秒固定為紅燈時相，紅燈結束後依顯示號誌點擊選項按鈕作答</li>
+                <li>請根據影片中的情境進行判斷，若對向有來車且左轉號誌為非保護左轉時應選擇停讓</li>
             </ol>
 
 
