--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <div id="quiz-container" class="hidden">
         <h2 id="question"></h2>
         <div id="video-container">
-            <video id="video" width="320" height="180" controls></video>
+            <video id="video" width="320" height="180"></video>
         </div>
         <div id="question-container">
             <div id="options-container"></div>
