--- a/index.html
+++ b/index.html
@@ -123,7 +123,19 @@
             </table>
         </div>        
     </div>
-
+    
+    <div id="demo-container" class="hidden">
+        <h2>測驗示範頁面</h2>
+        <div id="video-container">
+            <video id="video" width="320" height="180"></video>
+        </div>
+        <div id="question-container">
+            <div id="options-container"></div>
+        </div>
+        <div id="demo-feedback" class="hidden"></div>
+        <button id="demo-next-button">了解並進入正式測驗</button>
+    </div>
+    
     <div id="quiz-container" class="hidden">
         <h2 id="question"></h2>
         <div id="video-container">
@@ -152,7 +164,7 @@
                     其他
                 </label>
             </div>
-            <textarea id="open-ended-q1" rows="4" cols="50" placeholder="請輸入您的回答... (非必填)" class="hidden"></textarea>
+            <textarea id="open-ended-q1" rows="4" cols="50" placeholder="請輸入您的回答... " class="hidden"></textarea>
         </div>
 
         <div class="question-block">
@@ -171,7 +183,7 @@
                     其他
                 </label>
             </div>
-            <textarea id="open-ended-q2" rows="4" cols="50" placeholder="請輸入您的回答... (非必填)" class="hidden"></textarea>
+            <textarea id="open-ended-q2" rows="4" cols="50" placeholder="請輸入您的回答... " class="hidden"></textarea>
         </div>
 
         <div class="question-block">
@@ -190,7 +202,7 @@
                     其他
                 </label>
             </div>
-            <textarea id="open-ended-q3" rows="4" cols="50" placeholder="請輸入您的回答... (非必填)" class="hidden"></textarea>
+            <textarea id="open-ended-q3" rows="4" cols="50" placeholder="請輸入您的回答... " class="hidden"></textarea>
         </div>
 
         <div class="question-block">
@@ -209,7 +221,7 @@
                     其他
                 </label>
             </div>
-            <textarea id="open-ended-q4" rows="4" cols="50" placeholder="請輸入您的回答... (非必填)" class="hidden"></textarea>
+            <textarea id="open-ended-q4" rows="4" cols="50" placeholder="請輸入您的回答... " class="hidden"></textarea>
         </div>
 
         <div class="question-block">
@@ -228,7 +240,7 @@
                     其他
                 </label>
             </div>
-            <textarea id="open-ended-q5" rows="4" cols="50" placeholder="請輸入您的回答... (非必填)" class="hidden"></textarea>
+            <textarea id="open-ended-q5" rows="4" cols="50" placeholder="請輸入您的回答... " class="hidden"></textarea>
         </div>
 
         <div class="question-block">
@@ -247,7 +259,7 @@
                     其他
                 </label>
             </div>
-            <textarea id="open-ended-q6" rows="4" cols="50" placeholder="請輸入您的回答... (非必填)" class="hidden"></textarea>
+            <textarea id="open-ended-q6" rows="4" cols="50" placeholder="請輸入您的回答... " class="hidden"></textarea>
         </div>
 
         <div class="question-block">
@@ -266,7 +278,7 @@
                     其他
                 </label>
             </div>
-            <textarea id="open-ended-q7" rows="4" cols="50" placeholder="請輸入您的回答... (非必填)" class="hidden"></textarea>
+            <textarea id="open-ended-q7" rows="4" cols="50" placeholder="請輸入您的回答... " class="hidden"></textarea>
         </div>
 
         <div class="question-block">
@@ -285,7 +297,7 @@
                     其他
                 </label>
             </div>
-            <textarea id="open-ended-q8" rows="4" cols="50" placeholder="請輸入您的回答... (非必填)" class="hidden"></textarea>
+            <textarea id="open-ended-q8" rows="4" cols="50" placeholder="請輸入您的回答... " class="hidden"></textarea>
         </div>
 
         <button id="submit-open-ended-button">提交並查看結果</button>
