--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
     
-    <div id="basic-info-form">
+    <div id="basic-info-form" class="hidden">
         <h1>駕駛人基本資料</h1>
         <form id="basic-info-form" method="POST">
             <label for="email">電子郵件:</label>
