--- a/index.html
+++ b/index.html
@@ -132,8 +132,9 @@
         <div id="question-container">
             <div id="options-container"></div>
         </div>
-        <div id="demo-feedback" class="hidden"></div>
-        <button id="demo-next-button">了解並進入正式測驗</button>
+        <div id="demo-feedback" class="hidden">
+            <button id="demo-next-button">了解並進入正式測驗</button>
+        </div>
     </div>
     
     <div id="quiz-container" class="hidden">
