--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
             <label for="frequency">駕駛頻率:</label>
             <select id="frequency" name="frequency" required>
                 <option value="">選擇駕駛頻率</option>
-                <option value="daily">每日</option>
-                <option value="weekly">每週</option>
-                <option value="monthly">每月</option>
+                <option value="daily">每日1次</option>
+                <option value="weekly">每週1次</option>
+                <option value="monthly">每月1次</option>
                 <option value="rarely">偶爾</option>
             </select>
             <br>
