--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
                 <option value="">選擇性別</option>
                 <option value="male">男性</option>
                 <option value="female">女性</option>
-                <option value="other">其他</option>
             </select>
             <br>
             <label for="age">年齡:</label>
@@ -152,7 +151,7 @@
                     其他
                 </label>
             </div>
-            <textarea id="open-ended-q1" rows="4" cols="50" placeholder="請輸入您的回答... (非必填)" class="hidden"></textarea>
+            <textarea id="open-ended-q1" rows="4" cols="50" placeholder="請輸入您的回答..." class="hidden"></textarea>
         </div>
 
         <div class="question-block">
@@ -171,7 +170,7 @@
                     其他
                 </label>
             </div>
-            <textarea id="open-ended-q2" rows="4" cols="50" placeholder="請輸入您的回答... (非必填)" class="hidden"></textarea>
+            <textarea id="open-ended-q2" rows="4" cols="50" placeholder="請輸入您的回答..." class="hidden"></textarea>
         </div>
 
         <div class="question-block">
@@ -190,7 +189,7 @@
                     其他
                 </label>
             </div>
-            <textarea id="open-ended-q3" rows="4" cols="50" placeholder="請輸入您的回答... (非必填)" class="hidden"></textarea>
+            <textarea id="open-ended-q3" rows="4" cols="50" placeholder="請輸入您的回答..." class="hidden"></textarea>
         </div>
 
         <div class="question-block">
@@ -209,7 +208,7 @@
                     其他
                 </label>
             </div>
-            <textarea id="open-ended-q4" rows="4" cols="50" placeholder="請輸入您的回答... (非必填)" class="hidden"></textarea>
+            <textarea id="open-ended-q4" rows="4" cols="50" placeholder="請輸入您的回答..." class="hidden"></textarea>
         </div>
 
         <div class="question-block">
@@ -228,7 +227,7 @@
                     其他
                 </label>
             </div>
-            <textarea id="open-ended-q5" rows="4" cols="50" placeholder="請輸入您的回答... (非必填)" class="hidden"></textarea>
+            <textarea id="open-ended-q5" rows="4" cols="50" placeholder="請輸入您的回答..." class="hidden"></textarea>
         </div>
 
         <div class="question-block">
@@ -247,7 +246,7 @@
                     其他
                 </label>
             </div>
-            <textarea id="open-ended-q6" rows="4" cols="50" placeholder="請輸入您的回答... (非必填)" class="hidden"></textarea>
+            <textarea id="open-ended-q6" rows="4" cols="50" placeholder="請輸入您的回答..." class="hidden"></textarea>
         </div>
 
         <div class="question-block">
@@ -266,7 +265,7 @@
                     其他
                 </label>
             </div>
-            <textarea id="open-ended-q7" rows="4" cols="50" placeholder="請輸入您的回答... (非必填)" class="hidden"></textarea>
+            <textarea id="open-ended-q7" rows="4" cols="50" placeholder="請輸入您的回答..." class="hidden"></textarea>
         </div>
 
         <div class="question-block">
@@ -285,7 +284,7 @@
                     其他
                 </label>
             </div>
-            <textarea id="open-ended-q8" rows="4" cols="50" placeholder="請輸入您的回答... (非必填)" class="hidden"></textarea>
+            <textarea id="open-ended-q8" rows="4" cols="50" placeholder="請輸入您的回答..." class="hidden"></textarea>
         </div>
 
         <button id="submit-open-ended-button">提交並查看結果</button>
