--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             <select id="frequency" name="frequency" required>
                 <option value="">選擇駕駛頻率</option>
                 <option value="daily">每日1次</option>
-                <option value="weekly">每週1次</option>
-                <option value="monthly">每月1次</option>
+                <option value="weekly">每週至少1次</option>
+                <option value="monthly">每月至少1次</option>
                 <option value="rarely">偶爾</option>
             </select>
             <br>
