--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@
         </div>        
     </div>
 
+    <div id="demo-result-container" class="hidden"></div>
+
     <div id="quiz-container" class="hidden">
         <h2 id="question"></h2>
         <div id="video-container">
