--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="rules" style="text-align: left;">
             <h2>測驗規則</h2>
             <ol>
-                <li>總共22題，每題均為判斷左轉行為決策的單選擇題</li>
+                <li>總共12題，每題均為判斷左轉行為決策的單選擇題</li>
                 <li>進入題目頁面後，駕駛模擬影片會自動播放</li>
                 <li>影片播放前3秒固定為紅燈時相，紅燈結束後依顯示號誌點擊選項按鈕作答</li>
                 <li><strong style="color: red;">請根據您實際在道路上的反應做駕駛行為抉擇，例如若對向無來車，且號誌為非保護左轉，您會選擇直接左轉，若對向有來車時您應該會選擇讓行</strong></li>
@@ -93,31 +93,19 @@
                     <td>(a)</td><td>綠色圓形</td><td><img src="三相_橫式_綠圓.jpg" alt="主要號誌 (a)" style="width: 40px;"></td><td>黃色閃爍箭頭</td><td><img src="直閃黃.gif" alt="左轉號誌 (a)" style="width: 20px;"></td><td>可左轉(需讓行)</td>
                 </tr>
                 <tr>
-                    <td>(b)</td><td>綠色圓形</td><td><img src="三相_橫式_綠圓.jpg" alt="主要號誌 (b)" style="width: 40px;"></td><td>紅色閃爍箭頭</td><td><img src="直閃紅.gif" alt="左轉號誌 (b)" style="width: 20px;"></td><td>可左轉(需讓行)</td>
+                    <td>(b)</td><td>綠色圓形</td><td><img src="三相_橫式_綠圓.jpg" alt="主要號誌 (b)" style="width: 40px;"></td><td>黃色長亮箭頭</td><td><img src="ya.jpg" alt="左轉號誌 (b)" style="width: 20px;"></td><td>可左轉(需讓行)</td>
                 </tr>
                 <tr>
-                    <td>(c)</td><td>綠色圓形</td><td><img src="三相_橫式_綠圓.jpg" alt="主要號誌 (c)" style="width: 40px;"></td><td>黃色長亮箭頭</td><td><img src="ya.jpg" alt="左轉號誌 (c)" style="width: 20px;"></td><td>可左轉(需讓行)</td>
+                    <td>(c)</td><td>綠色圓形</td><td><img src="三相_橫式_綠圓.jpg" alt="主要號誌 (c)" style="width: 40px;"></td><td>(無)</td><td>(無)</td><td>可左轉(需讓行)</td>
                 </tr>
                 <tr>
-                    <td>(d)</td><td>綠色圓形</td><td><img src="三相_橫式_綠圓.jpg" alt="主要號誌 (d)" style="width: 40px;"></td><td>紅色長亮箭頭</td><td><img src="四相_直式_紅箭頭.jpg" alt="左轉號誌 (d)" style="width: 20px;"></td><td>可左轉(需讓行)</td>
+                    <td>(d)</td><td>紅色圓形</td><td><img src="三相_橫式_紅燈.jpg" alt="主要號誌 (d)" style="width: 40px;"></td><td>綠色長亮箭頭</td><td><img src="ga.jpg" alt="左轉號誌 (d)" style="width: 20px;"></td><td>保護型左轉(不需讓行)</td>
                 </tr>
                 <tr>
-                    <td>(e)</td><td>綠色圓形</td><td><img src="三相_橫式_綠圓.jpg" alt="主要號誌 (e)" style="width: 40px;"></td><td>(無)</td><td>(無)</td><td>可左轉(需讓行)</td>
+                    <td>(e)</td><td>黃色閃爍圓形</td><td><img src="閃黃燈.gif" alt="主要號誌 (e)" style="width: 40px;"></td><td>紅色圓形</td><td><img src="四相_直式_紅圓.jpg" alt="左轉號誌 (e)" style="width: 20px;"></td><td>不可左轉</td>
                 </tr>
                 <tr>
-                    <td>(f)</td><td>紅色圓形</td><td><img src="三相_橫式_紅燈.jpg" alt="主要號誌 (f)" style="width: 40px;"></td><td>綠色長亮箭頭</td><td><img src="ga.jpg" alt="左轉號誌 (f)" style="width: 20px;"></td><td>保護型左轉(不需讓行)</td>
-                </tr>
-                <tr>
-                    <td>(g)</td><td>紅色閃爍圓形</td><td><img src="閃紅燈.gif" alt="主要號誌 (g)" style="width: 40px;"></td><td>(無)</td><td>(無)</td><td>可左轉(需讓行)</td>
-                </tr>
-                <tr>
-                    <td>(h)</td><td>黃色閃爍圓形</td><td><img src="閃黃燈.gif" alt="主要號誌 (h)" style="width: 40px;"></td><td>(無)</td><td>(無)</td><td>可左轉(需讓行)</td>
-                </tr>
-                <tr>
-                    <td>(i)</td><td>黃色閃爍圓形</td><td><img src="閃黃燈.gif" alt="主要號誌 (i)" style="width: 40px;"></td><td>紅色圓形</td><td><img src="四相_直式_紅圓.jpg" alt="左轉號誌 (i)" style="width: 20px;"></td><td>不可左轉</td>
-                </tr>
-                <tr>
-                    <td>(j)</td><td>綠色圓形</td><td><img src="三相_橫式_綠圓.jpg" alt="主要號誌 (j)" style="width: 40px;"></td><td>紅色圓形</td><td><img src="四相_直式_紅圓.jpg" alt="左轉號誌 (j)" style="width: 20px;"></td><td>不可左轉</td>
+                    <td>(f)</td><td>綠色圓形</td><td><img src="三相_橫式_綠圓.jpg" alt="主要號誌 (f)" style="width: 40px;"></td><td>紅色圓形</td><td><img src="四相_直式_紅圓.jpg" alt="左轉號誌 (f)" style="width: 20px;"></td><td>不可左轉</td>
                 </tr>
             </table>
         </div>        
@@ -157,26 +145,7 @@
         </div>
 
         <div class="question-block">
-            <label for="open-ended-q2">(b) 綠色圓形+紅色閃爍箭頭燈號：</label>
-            <div class="options">
-                <label for="easy2">
-                    <input type="radio" id="easy2" name="understand2" value="easy" required>
-                    易懂
-                </label>
-                <label for="confuse2">
-                    <input type="radio" id="confuse2" name="understand2" value="confuse" required>
-                    使人困惑
-                </label>
-                <label for="other2">
-                    <input type="radio" id="other2" name="understand2" value="other" required>
-                    其他
-                </label>
-            </div>
-            <textarea id="open-ended-q2" rows="4" cols="50" placeholder="請輸入您的回答..." class="hidden"></textarea>
-        </div>
-
-        <div class="question-block">
-            <label for="open-ended-q3">(c) 綠色圓形+黃色箭頭燈號：</label>
+            <label for="open-ended-q3">(b) 綠色圓形+黃色箭頭燈號：</label>
             <div class="options">
                 <label for="easy3">
                     <input type="radio" id="easy3" name="understand3" value="easy" required>
@@ -195,26 +164,7 @@
         </div>
 
         <div class="question-block">
-            <label for="open-ended-q4">(d) 綠色圓形+紅色箭頭燈號：</label>
-            <div class="options">
-                <label for="easy4">
-                    <input type="radio" id="easy4" name="understand4" value="easy" required>
-                    易懂
-                </label>
-                <label for="confuse4">
-                    <input type="radio" id="confuse4" name="understand4" value="confuse" required>
-                    使人困惑
-                </label>
-                <label for="other4">
-                    <input type="radio" id="other4" name="understand4" value="other" required>
-                    其他
-                </label>
-            </div>
-            <textarea id="open-ended-q4" rows="4" cols="50" placeholder="請輸入您的回答..." class="hidden"></textarea>
-        </div>
-
-        <div class="question-block">
-            <label for="open-ended-q5">(e) 綠色圓形燈號：</label>
+            <label for="open-ended-q5">(c) 綠色圓形燈號：</label>
             <div class="options">
                 <label for="easy5">
                     <input type="radio" id="easy5" name="understand5" value="easy" required>
@@ -233,7 +183,7 @@
         </div>
 
         <div class="question-block">
-            <label for="open-ended-q6">(f) 紅色圓形+綠色箭頭燈號：</label>
+            <label for="open-ended-q6">(d) 紅色圓形+綠色箭頭燈號：</label>
             <div class="options">
                 <label for="easy6">
                     <input type="radio" id="easy6" name="understand6" value="easy" required>
@@ -249,44 +199,6 @@
                 </label>
             </div>
             <textarea id="open-ended-q6" rows="4" cols="50" placeholder="請輸入您的回答..." class="hidden"></textarea>
-        </div>
-
-        <div class="question-block">
-            <label for="open-ended-q7">(g) 紅色閃爍圓形燈號：</label>
-            <div class="options">
-                <label for="easy7">
-                    <input type="radio" id="easy7" name="understand7" value="easy" required>
-                    易懂
-                </label>
-                <label for="confuse7">
-                    <input type="radio" id="confuse7" name="understand7" value="confuse" required>
-                    使人困惑
-                </label>
-                <label for="other7">
-                    <input type="radio" id="other7" name="understand7" value="other" required>
-                    其他
-                </label>
-            </div>
-            <textarea id="open-ended-q7" rows="4" cols="50" placeholder="請輸入您的回答..." class="hidden"></textarea>
-        </div>
-
-        <div class="question-block">
-            <label for="open-ended-q8">(h) 黃色閃爍圓形燈號：</label>
-            <div class="options">
-                <label for="easy8">
-                    <input type="radio" id="easy8" name="understand8" value="easy" required>
-                    易懂
-                </label>
-                <label for="confuse8">
-                    <input type="radio" id="confuse8" name="understand8" value="confuse" required>
-                    使人困惑
-                </label>
-                <label for="other8">
-                    <input type="radio" id="other8" name="understand8" value="other" required>
-                    其他
-                </label>
-            </div>
-            <textarea id="open-ended-q8" rows="4" cols="50" placeholder="請輸入您的回答..." class="hidden"></textarea>
         </div>
 
         <button id="submit-open-ended-button">提交並查看結果</button>
