--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <li>總共12題，每題均為判斷左轉行為決策的單選擇題</li>
                 <li>進入題目頁面後，駕駛模擬影片會自動播放</li>
                 <li>影片播放前3秒固定為紅燈時相，紅燈結束後依顯示號誌點擊選項按鈕作答</li>
-                <li><strong style="color: red;">請根據您實際在道路上的反應做駕駛行為抉擇，例如若對向無來車，且號誌為非保護左轉，您會選擇直接左轉，若對向有來車時您應該會選擇讓行</strong></li>
+                <li><strong style="color: red;">請根據號誌所傳達的指令做選擇</strong></li>
             </ol>
 
 
