--- a/index.html
+++ b/index.html
@@ -90,22 +90,28 @@
                     <td>&nbsp;</td><td>主要號誌</td><td>圖</td><td>左轉專用號誌</td><td>圖</td><td>號誌含意</td>
                 </tr>
                 <tr>
-                    <td>(a)</td><td>綠色圓形</td><td><img src="三相_橫式_綠圓.jpg" alt="主要號誌 (a)" style="width: 40px;"></td><td>黃色閃爍箭頭</td><td><img src="直閃黃.gif" alt="左轉號誌 (a)" style="width: 20px;"></td><td>可左轉(需讓行)</td>
+                    <td>(a)</td><td>直行右轉號誌</td><td><img src="橫4_直行右轉.jpg" alt="主要號誌 (a)" style="width: 40px;"></td><td>黃色箭頭長亮</td><td><img src="直_黃箭.jpg" alt="左轉號誌 (a)" style="width: 20px;"></td><td>非保護左轉(需讓行)</td>
                 </tr>
                 <tr>
-                    <td>(b)</td><td>綠色圓形</td><td><img src="三相_橫式_綠圓.jpg" alt="主要號誌 (b)" style="width: 40px;"></td><td>黃色長亮箭頭</td><td><img src="ya.jpg" alt="左轉號誌 (b)" style="width: 20px;"></td><td>可左轉(需讓行)</td>
+                    <td>(b)</td><td>直行右轉號誌</td><td><img src="橫4_直行右轉.jpg" alt="主要號誌 (b)" style="width: 40px;"></td><td>黃色箭頭閃爍</td><td><img src="直_黃箭_閃.gif" alt="左轉號誌 (b)" style="width: 20px;"></td><td>非保護左轉(需讓行)</td>
                 </tr>
                 <tr>
-                    <td>(c)</td><td>綠色圓形</td><td><img src="三相_橫式_綠圓.jpg" alt="主要號誌 (c)" style="width: 40px;"></td><td>(無)</td><td>(無)</td><td>可左轉(需讓行)</td>
+                    <td>(c)</td><td>直行右轉號誌</td><td><img src="橫4_直行右轉.jpg" alt="主要號誌 (c)" style="width: 40px;"></td><td>綠色箭頭閃爍</td><td><img src="直_綠箭_閃.gif" alt="左轉號誌 (c)" style="width: 20px;"></td><td>非保護左轉(需讓行)</td>
                 </tr>
                 <tr>
-                    <td>(d)</td><td>紅色圓形</td><td><img src="三相_橫式_紅燈.jpg" alt="主要號誌 (d)" style="width: 40px;"></td><td>綠色長亮箭頭</td><td><img src="ga.jpg" alt="左轉號誌 (d)" style="width: 20px;"></td><td>保護型左轉(不需讓行)</td>
+                    <td>(d)</td><td>直行右轉號誌</td><td><img src="橫4_直行右轉.jpg" alt="主要號誌 (d)" style="width: 40px;"></td><td>綠色圓型閃爍</td><td><img src="直_綠圓_閃.gif" alt="左轉號誌 (d)" style="width: 20px;"></td><td>非保護左轉(需讓行)</td>
                 </tr>
                 <tr>
-                    <td>(e)</td><td>黃色閃爍圓形</td><td><img src="閃黃燈.gif" alt="主要號誌 (e)" style="width: 40px;"></td><td>紅色圓形</td><td><img src="四相_直式_紅圓.jpg" alt="左轉號誌 (e)" style="width: 20px;"></td><td>不可左轉</td>
+                    <td>(e)</td><td>直行右轉號誌</td><td><img src="橫4_直行右轉.jpg" alt="主要號誌 (e)" style="width: 40px;"></td><td>綠色箭頭長亮</td><td><img src="直_綠箭.jpg" alt="左轉號誌 (e)" style="width: 20px;"></td><td>保護左轉</td>
                 </tr>
                 <tr>
-                    <td>(f)</td><td>綠色圓形</td><td><img src="三相_橫式_綠圓.jpg" alt="主要號誌 (f)" style="width: 40px;"></td><td>紅色圓形</td><td><img src="四相_直式_紅圓.jpg" alt="左轉號誌 (f)" style="width: 20px;"></td><td>不可左轉</td>
+                    <td>(f)</td><td>直行右轉號誌</td><td><img src="橫4_直行右轉.jpg" alt="主要號誌 (f)" style="width: 40px;"></td><td>綠色圓型長亮</td><td><img src="直_綠圓.png" alt="左轉號誌 (f)" style="width: 20px;"></td><td>保護左轉</td>
+                </tr>
+                <tr>
+                    <td>(g)</td><td>紅燈號誌</td><td><img src="橫4_紅圓.jpg" alt="主要號誌 (g)" style="width: 40px;"></td><td>綠色箭頭長亮</td><td><img src="直_綠箭.jpg" alt="左轉號誌 (g)" style="width: 20px;"></td><td>保護左轉</td>
+                </tr>
+                <tr>
+                    <td>(h)</td><td>紅燈號誌</td><td><img src="橫4_紅圓.jpg" alt="主要號誌 (h)" style="width: 40px;"></td><td>綠色箭頭長亮</td><td><img src="直_綠圓.png" alt="左轉號誌 (h)" style="width: 20px;"></td><td>保護左轉</td>
                 </tr>
             </table>
         </div>        
