--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <div id="open-ended-questions" class="hidden">
         <h2>請簡單描述您對下列左轉號誌燈的理解：</h2>
         <div class="question-block">
-            <label for="open-ended-q1">(a) 綠色圓形+黃色閃爍箭頭燈號：</label>
+            <label for="open-ended-q1">(a) 直行右轉號誌+黃色箭頭長亮：</label>
             <div class="options">
                 <label for="easy1">
                     <input type="radio" id="easy1" name="understand1" value="easy" required>
@@ -153,7 +153,7 @@
         </div>
 
         <div class="question-block">
-            <label for="open-ended-q3">(b) 綠色圓形+黃色箭頭燈號：</label>
+            <label for="open-ended-q3">(b) 直行右轉號誌+黃色箭頭閃爍：</label>
             <div class="options">
                 <label for="easy3">
                     <input type="radio" id="easy3" name="understand3" value="easy" required>
@@ -172,7 +172,7 @@
         </div>
 
         <div class="question-block">
-            <label for="open-ended-q5">(c) 綠色圓形燈號：</label>
+            <label for="open-ended-q5">(c) 直行右轉號誌+綠色箭頭閃爍：</label>
             <div class="options">
                 <label for="easy5">
                     <input type="radio" id="easy5" name="understand5" value="easy" required>
@@ -191,7 +191,7 @@
         </div>
 
         <div class="question-block">
-            <label for="open-ended-q6">(d) 紅色圓形+綠色箭頭燈號：</label>
+            <label for="open-ended-q6">(d) 直行右轉號誌+綠色圓型閃爍：</label>
             <div class="options">
                 <label for="easy6">
                     <input type="radio" id="easy6" name="understand6" value="easy" required>
@@ -208,6 +208,79 @@
             </div>
             <textarea id="open-ended-q6" rows="4" cols="50" placeholder="請輸入您的回答..." class="hidden"></textarea>
         </div>
+        <div class="question-block">
+            <label for="open-ended-q6">(e) 直行右轉號誌+綠色箭頭長亮：</label>
+            <div class="options">
+                <label for="easy6">
+                    <input type="radio" id="easy6" name="understand6" value="easy" required>
+                    易懂
+                </label>
+                <label for="confuse6">
+                    <input type="radio" id="confuse6" name="understand6" value="confuse" required>
+                    使人困惑
+                </label>
+                <label for="other6">
+                    <input type="radio" id="other6" name="understand6" value="other" required>
+                    其他
+                </label>
+            </div>
+            <textarea id="open-ended-q6" rows="4" cols="50" placeholder="請輸入您的回答..." class="hidden"></textarea>
+        </div>
+        <div class="question-block">
+            <label for="open-ended-q6">(f) 直行右轉號誌+綠色圓型長亮：</label>
+            <div class="options">
+                <label for="easy6">
+                    <input type="radio" id="easy6" name="understand6" value="easy" required>
+                    易懂
+                </label>
+                <label for="confuse6">
+                    <input type="radio" id="confuse6" name="understand6" value="confuse" required>
+                    使人困惑
+                </label>
+                <label for="other6">
+                    <input type="radio" id="other6" name="understand6" value="other" required>
+                    其他
+                </label>
+            </div>
+            <textarea id="open-ended-q6" rows="4" cols="50" placeholder="請輸入您的回答..." class="hidden"></textarea>
+        </div>
+        <div class="question-block">
+            <label for="open-ended-q6">(g) 紅燈號誌+綠色箭頭長亮：</label>
+            <div class="options">
+                <label for="easy6">
+                    <input type="radio" id="easy6" name="understand6" value="easy" required>
+                    易懂
+                </label>
+                <label for="confuse6">
+                    <input type="radio" id="confuse6" name="understand6" value="confuse" required>
+                    使人困惑
+                </label>
+                <label for="other6">
+                    <input type="radio" id="other6" name="understand6" value="other" required>
+                    其他
+                </label>
+            </div>
+            <textarea id="open-ended-q6" rows="4" cols="50" placeholder="請輸入您的回答..." class="hidden"></textarea>
+        </div>
+        <div class="question-block">
+            <label for="open-ended-q6">(h) 紅燈號誌+綠色圓型長亮：</label>
+            <div class="options">
+                <label for="easy6">
+                    <input type="radio" id="easy6" name="understand6" value="easy" required>
+                    易懂
+                </label>
+                <label for="confuse6">
+                    <input type="radio" id="confuse6" name="understand6" value="confuse" required>
+                    使人困惑
+                </label>
+                <label for="other6">
+                    <input type="radio" id="other6" name="understand6" value="other" required>
+                    其他
+                </label>
+            </div>
+            <textarea id="open-ended-q6" rows="4" cols="50" placeholder="請輸入您的回答..." class="hidden"></textarea>
+        </div>
+
 
         <button id="submit-open-ended-button">提交並查看結果</button>
     </div>
