--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="rules" style="text-align: left;">
             <h2>測驗規則</h2>
             <ol>
-                <li>總共21題，每題均為判斷號誌所傳達指令(判斷號誌是保護左轉、非保護左轉、不能左轉)單選擇題</li>
+                <li>總共21題，每題均為判斷號誌含意(判斷號誌是保護左轉、非保護左轉、不能左轉)單選擇題</li>
                 <li>每題均為不同情境與不同號誌組合，其中包含現有號誌(不另外解釋)，以及引入獨立左轉號誌，說明如下表</li>
                 <li>進入題目頁面後，駕駛模擬影片會自動播放</li>
                 <li>影片播放前3秒號誌為全黑，3秒後依顯示號誌點擊選項按鈕作答</li>
