--- a/index.html
+++ b/index.html
@@ -85,35 +85,34 @@
                 <li>影片播放前3秒號誌為全黑，3秒後依顯示號誌點擊選項按鈕作答</li>
                 <li><strong style="color: red;">請根據號誌所傳達的指令做選擇</strong></li>
             </ol>
-
-
+    
             <table class="styled-table">
                 <tr>
-                    <td>&nbsp;</td><td>主要號誌</td><td>圖</td><td>左轉專用號誌</td><td>圖</td><td>號誌含意</td>
+                    <td>&nbsp;</td><td>主要號誌</td><td>圖</td><td>左轉專用號誌</td><td>圖</td><td>號誌含意</td><td>已閱讀</td>
                 </tr>
                 <tr>
-                    <td>(a)</td><td>直行右轉號誌</td><td><img src="橫4_直行右轉.jpg" alt="主要號誌 (a)" style="width: 50px;"></td><td>黃色箭頭長亮</td><td><img src="直_黃箭.jpg" alt="左轉號誌 (a)" style="width: 20px;"></td><td>非保護左轉(需讓行)</td>
+                    <td>(a)</td><td>直行右轉號誌</td><td><img src="橫4_直行右轉.jpg" alt="主要號誌 (a)" style="width: 50px;"></td><td>黃色箭頭長亮</td><td><img src="直_黃箭.jpg" alt="左轉號誌 (a)" style="width: 20px;"></td><td>非保護左轉(需讓行)</td><td><input type="checkbox"></td>
                 </tr>
                 <tr>
-                    <td>(b)</td><td>直行右轉號誌</td><td><img src="橫4_直行右轉.jpg" alt="主要號誌 (b)" style="width: 50px;"></td><td>黃色箭頭閃爍</td><td><img src="直_黃箭_閃.gif" alt="左轉號誌 (b)" style="width: 20px;"></td><td>非保護左轉(需讓行)</td>
+                    <td>(b)</td><td>直行右轉號誌</td><td><img src="橫4_直行右轉.jpg" alt="主要號誌 (b)" style="width: 50px;"></td><td>黃色箭頭閃爍</td><td><img src="直_黃箭_閃.gif" alt="左轉號誌 (b)" style="width: 20px;"></td><td>非保護左轉(需讓行)</td><td><input type="checkbox"></td>
                 </tr>
                 <tr>
-                    <td>(c)</td><td>直行右轉號誌</td><td><img src="橫4_直行右轉.jpg" alt="主要號誌 (c)" style="width: 50px;"></td><td>綠色箭頭閃爍</td><td><img src="直_綠箭_閃.gif" alt="左轉號誌 (c)" style="width: 20px;"></td><td>非保護左轉(需讓行)</td>
+                    <td>(c)</td><td>直行右轉號誌</td><td><img src="橫4_直行右轉.jpg" alt="主要號誌 (c)" style="width: 50px;"></td><td>綠色箭頭閃爍</td><td><img src="直_綠箭_閃.gif" alt="左轉號誌 (c)" style="width: 20px;"></td><td>非保護左轉(需讓行)</td><td><input type="checkbox"></td>
                 </tr>
                 <tr>
-                    <td>(d)</td><td>直行右轉號誌</td><td><img src="橫4_直行右轉.jpg" alt="主要號誌 (d)" style="width: 50px;"></td><td>綠色圓型閃爍</td><td><img src="直_綠圓_閃.gif" alt="左轉號誌 (d)" style="width: 20px;"></td><td>非保護左轉(需讓行)</td>
+                    <td>(d)</td><td>直行右轉號誌</td><td><img src="橫4_直行右轉.jpg" alt="主要號誌 (d)" style="width: 50px;"></td><td>綠色圓型閃爍</td><td><img src="直_綠圓_閃.gif" alt="左轉號誌 (d)" style="width: 20px;"></td><td>非保護左轉(需讓行)</td><td><input type="checkbox"></td>
                 </tr>
                 <tr>
-                    <td>(e)</td><td>直行右轉號誌</td><td><img src="橫4_直行右轉.jpg" alt="主要號誌 (e)" style="width: 50px;"></td><td>綠色箭頭長亮</td><td><img src="直_綠箭.jpg" alt="左轉號誌 (e)" style="width: 20px;"></td><td>保護左轉</td>
+                    <td>(e)</td><td>直行右轉號誌</td><td><img src="橫4_直行右轉.jpg" alt="主要號誌 (e)" style="width: 50px;"></td><td>綠色箭頭長亮</td><td><img src="直_綠箭.jpg" alt="左轉號誌 (e)" style="width: 20px;"></td><td>保護左轉</td><td><input type="checkbox"></td>
                 </tr>
                 <tr>
-                    <td>(f)</td><td>直行右轉號誌</td><td><img src="橫4_直行右轉.jpg" alt="主要號誌 (f)" style="width: 50px;"></td><td>綠色圓型長亮</td><td><img src="直_綠圓.png" alt="左轉號誌 (f)" style="width: 20px;"></td><td>保護左轉</td>
+                    <td>(f)</td><td>直行右轉號誌</td><td><img src="橫4_直行右轉.jpg" alt="主要號誌 (f)" style="width: 50px;"></td><td>綠色圓型長亮</td><td><img src="直_綠圓.png" alt="左轉號誌 (f)" style="width: 20px;"></td><td>保護左轉</td><td><input type="checkbox"></td>
                 </tr>
                 <tr>
-                    <td>(g)</td><td>紅燈號誌</td><td><img src="橫4_紅圓.jpg" alt="主要號誌 (g)" style="width: 50px;"></td><td>綠色箭頭長亮</td><td><img src="直_綠箭.jpg" alt="左轉號誌 (g)" style="width: 20px;"></td><td>保護左轉</td>
+                    <td>(g)</td><td>紅燈號誌</td><td><img src="橫4_紅圓.jpg" alt="主要號誌 (g)" style="width: 50px;"></td><td>綠色箭頭長亮</td><td><img src="直_綠箭.jpg" alt="左轉號誌 (g)" style="width: 20px;"></td><td>保護左轉</td><td><input type="checkbox"></td>
                 </tr>
                 <tr>
-                    <td>(h)</td><td>紅燈號誌</td><td><img src="橫4_紅圓.jpg" alt="主要號誌 (h)" style="width: 50px;"></td><td>綠色箭頭長亮</td><td><img src="直_綠圓.png" alt="左轉號誌 (h)" style="width: 20px;"></td><td>保護左轉</td>
+                    <td>(h)</td><td>紅燈號誌</td><td><img src="橫4_紅圓.jpg" alt="主要號誌 (h)" style="width: 50px;"></td><td>綠色箭頭長亮</td><td><img src="直_綠圓.png" alt="左轉號誌 (h)" style="width: 20px;"></td><td>保護左轉</td><td><input type="checkbox"></td>
                 </tr>
             </table>
         </div>        
