--- a/index.html
+++ b/index.html
@@ -131,82 +131,46 @@
     </div>
     
 <div id="open-ended-questions" class="hidden">
-    <h2>請簡單描述您對下列左轉號誌燈的理解：</h2>
-
+    <h2>請依據下列左轉號誌的理解程度選擇您的看法：</h2>
     <div class="question-block">
-        <label for="open-ended-q1">(a) 直行右轉號誌+黃色箭頭長亮：</label>
+        <label for="likert-q1">(a) 直行右轉號誌 + 黃色箭頭長亮</label>
         <div class="options">
-            <label for="easy1">
-                <input type="radio" id="easy1" name="understand1" value="easy" required>
-                易懂
-            </label>
-            <label for="confuse1">
-                <input type="radio" id="confuse1" name="understand1" value="confuse" required>
-                使人困惑
-            </label>
-            <label for="other1">
-                <input type="radio" id="other1" name="understand1" value="other" required>
-                其他
-            </label>
+            <label><input type="radio" name="likert1" value="1"> 非常困惑</label>
+            <label><input type="radio" name="likert1" value="2"> 有點困惑</label>
+            <label><input type="radio" name="likert1" value="3"> 普通</label>
+            <label><input type="radio" name="likert1" value="4"> 有點理解</label>
+            <label><input type="radio" name="likert1" value="5"> 非常理解</label>
         </div>
-        <textarea id="open-ended-q1" rows="4" cols="50" placeholder="請輸入您的回答..." class="hidden"></textarea>
     </div>
-
     <div class="question-block">
-        <label for="open-ended-q2">(b) 直行右轉號誌+黃色箭頭閃爍：</label>
+        <label for="likert-q2">(b) 直行右轉號誌 + 黃色箭頭閃爍</label>
         <div class="options">
-            <label for="easy2">
-                <input type="radio" id="easy2" name="understand2" value="easy" required>
-                易懂
-            </label>
-            <label for="confuse2">
-                <input type="radio" id="confuse2" name="understand2" value="confuse" required>
-                使人困惑
-            </label>
-            <label for="other2">
-                <input type="radio" id="other2" name="understand2" value="other" required>
-                其他
-            </label>
+            <label><input type="radio" name="likert2" value="1"> 非常困惑</label>
+            <label><input type="radio" name="likert2" value="2"> 有點困惑</label>
+            <label><input type="radio" name="likert2" value="3"> 普通</label>
+            <label><input type="radio" name="likert2" value="4"> 有點理解</label>
+            <label><input type="radio" name="likert2" value="5"> 非常理解</label>
         </div>
-        <textarea id="open-ended-q2" rows="4" cols="50" placeholder="請輸入您的回答..." class="hidden"></textarea>
     </div>
-
     <div class="question-block">
-        <label for="open-ended-q3">(c) 直行右轉號誌+綠色箭頭閃爍：</label>
+        <label for="likert-q3">(c) 直行右轉號誌 + 綠色箭頭閃爍</label>
         <div class="options">
-            <label for="easy3">
-                <input type="radio" id="easy3" name="understand3" value="easy" required>
-                易懂
-            </label>
-            <label for="confuse3">
-                <input type="radio" id="confuse3" name="understand3" value="confuse" required>
-                使人困惑
-            </label>
-            <label for="other3">
-                <input type="radio" id="other3" name="understand3" value="other" required>
-                其他
-            </label>
+            <label><input type="radio" name="likert3" value="1"> 非常困惑</label>
+            <label><input type="radio" name="likert3" value="2"> 有點困惑</label>
+            <label><input type="radio" name="likert3" value="3"> 普通</label>
+            <label><input type="radio" name="likert3" value="4"> 有點理解</label>
+            <label><input type="radio" name="likert3" value="5"> 非常理解</label>
         </div>
-        <textarea id="open-ended-q3" rows="4" cols="50" placeholder="請輸入您的回答..." class="hidden"></textarea>
     </div>
-
     <div class="question-block">
-        <label for="open-ended-q4">(d) 直行右轉號誌+綠色圓型閃爍：</label>
+        <label for="likert-q4">(d) 直行右轉號誌 + 綠色圓型閃爍</label>
         <div class="options">
-            <label for="easy4">
-                <input type="radio" id="easy4" name="understand4" value="easy" required>
-                易懂
-            </label>
-            <label for="confuse4">
-                <input type="radio" id="confuse4" name="understand4" value="confuse" required>
-                使人困惑
-            </label>
-            <label for="other4">
-                <input type="radio" id="other4" name="understand4" value="other" required>
-                其他
-            </label>
+            <label><input type="radio" name="likert4" value="1"> 非常困惑</label>
+            <label><input type="radio" name="likert4" value="2"> 有點困惑</label>
+            <label><input type="radio" name="likert4" value="3"> 普通</label>
+            <label><input type="radio" name="likert4" value="4"> 有點理解</label>
+            <label><input type="radio" name="likert4" value="5"> 非常理解</label>
         </div>
-        <textarea id="open-ended-q4" rows="4" cols="50" placeholder="請輸入您的回答..." class="hidden"></textarea>
     </div>
 
     <div class="question-block">
