--- a/index.html
+++ b/index.html
@@ -173,81 +173,46 @@
         </div>
     </div>
 
-    <div class="question-block">
-        <label for="open-ended-q5">(e) 直行右轉號誌+綠色箭頭長亮：</label>
-        <div class="options">
-            <label for="easy5">
-                <input type="radio" id="easy5" name="understand5" value="easy" required>
-                易懂
-            </label>
-            <label for="confuse5">
-                <input type="radio" id="confuse5" name="understand5" value="confuse" required>
-                使人困惑
-            </label>
-            <label for="other5">
-                <input type="radio" id="other5" name="understand5" value="other" required>
-                其他
-            </label>
-        </div>
-        <textarea id="open-ended-q5" rows="4" cols="50" placeholder="請輸入您的回答..." class="hidden"></textarea>
+<div class="question-block">
+    <label for="likert-q5">(e) 直行右轉號誌 + 綠色箭頭長亮</label>
+    <div class="options">
+        <label><input type="radio" name="likert5" value="1"> 非常困惑</label>
+        <label><input type="radio" name="likert5" value="2"> 有點困惑</label>
+        <label><input type="radio" name="likert5" value="3"> 普通</label>
+        <label><input type="radio" name="likert5" value="4"> 有點理解</label>
+        <label><input type="radio" name="likert5" value="5"> 非常理解</label>
     </div>
-
-    <div class="question-block">
-        <label for="open-ended-q6">(f) 直行右轉號誌+綠色圓型長亮：</label>
-        <div class="options">
-            <label for="easy6">
-                <input type="radio" id="easy6" name="understand6" value="easy" required>
-                易懂
-            </label>
-            <label for="confuse6">
-                <input type="radio" id="confuse6" name="understand6" value="confuse" required>
-                使人困惑
-            </label>
-            <label for="other6">
-                <input type="radio" id="other6" name="understand6" value="other" required>
-                其他
-            </label>
-        </div>
-        <textarea id="open-ended-q6" rows="4" cols="50" placeholder="請輸入您的回答..." class="hidden"></textarea>
+</div>
+<div class="question-block">
+    <label for="likert-q6">(f) 直行右轉號誌 + 綠色圓型長亮</label>
+    <div class="options">
+        <label><input type="radio" name="likert6" value="1"> 非常困惑</label>
+        <label><input type="radio" name="likert6" value="2"> 有點困惑</label>
+        <label><input type="radio" name="likert6" value="3"> 普通</label>
+        <label><input type="radio" name="likert6" value="4"> 有點理解</label>
+        <label><input type="radio" name="likert6" value="5"> 非常理解</label>
     </div>
-
-    <div class="question-block">
-        <label for="open-ended-q7">(g) 紅燈號誌+綠色箭頭長亮：</label>
-        <div class="options">
-            <label for="easy7">
-                <input type="radio" id="easy7" name="understand7" value="easy" required>
-                易懂
-            </label>
-            <label for="confuse7">
-                <input type="radio" id="confuse7" name="understand7" value="confuse" required>
-                使人困惑
-            </label>
-            <label for="other7">
-                <input type="radio" id="other7" name="understand7" value="other" required>
-                其他
-            </label>
-        </div>
-        <textarea id="open-ended-q7" rows="4" cols="50" placeholder="請輸入您的回答..." class="hidden"></textarea>
+</div>
+<div class="question-block">
+    <label for="likert-q7">(g) 紅燈號誌 + 綠色箭頭長亮</label>
+    <div class="options">
+        <label><input type="radio" name="likert7" value="1"> 非常困惑</label>
+        <label><input type="radio" name="likert7" value="2"> 有點困惑</label>
+        <label><input type="radio" name="likert7" value="3"> 普通</label>
+        <label><input type="radio" name="likert7" value="4"> 有點理解</label>
+        <label><input type="radio" name="likert7" value="5"> 非常理解</label>
     </div>
-
-    <div class="question-block">
-        <label for="open-ended-q8">(h) 紅燈號誌+綠色圓型長亮：</label>
-        <div class="options">
-            <label for="easy8">
-                <input type="radio" id="easy8" name="understand8" value="easy" required>
-                易懂
-            </label>
-            <label for="confuse8">
-                <input type="radio" id="confuse8" name="understand8" value="confuse" required>
-                使人困惑
-            </label>
-            <label for="other8">
-                <input type="radio" id="other8" name="understand8" value="other" required>
-                其他
-            </label>
-        </div>
-        <textarea id="open-ended-q8" rows="4" cols="50" placeholder="請輸入您的回答..." class="hidden"></textarea>
+</div>
+<div class="question-block">
+    <label for="likert-q8">(h) 紅燈號誌 + 綠色圓型長亮</label>
+    <div class="options">
+        <label><input type="radio" name="likert8" value="1"> 非常困惑</label>
+        <label><input type="radio" name="likert8" value="2"> 有點困惑</label>
+        <label><input type="radio" name="likert8" value="3"> 普通</label>
+        <label><input type="radio" name="likert8" value="4"> 有點理解</label>
+        <label><input type="radio" name="likert8" value="5"> 非常理解</label>
     </div>
+</div>
 
     <button id="submit-open-ended-button">提交並查看結果</button>
 </div>
