--- a/index.html
+++ b/index.html
@@ -135,84 +135,84 @@
     <div class="question-block">
         <label for="likert-q1">(a) 直行右轉號誌 + 黃色箭頭長亮</label>
         <div class="options">
-            <label><input type="radio" name="likert1" value="1"> 非常困惑</label>
-            <label><input type="radio" name="likert1" value="2"> 有點困惑</label>
-            <label><input type="radio" name="likert1" value="3"> 普通</label>
-            <label><input type="radio" name="likert1" value="4"> 有點理解</label>
-            <label><input type="radio" name="likert1" value="5"> 非常理解</label>
+            <label><input type="radio" name="likert1" value="5"> 非常理解（完全理解）</label>
+            <label><input type="radio" name="likert1" value="4"> 有點理解（大致上理解）</label>
+            <label><input type="radio" name="likert1" value="3"> 中立（有些理解，也有些困惑）</label>
+            <label><input type="radio" name="likert1" value="2"> 有點困惑（不太理解）</label>
+            <label><input type="radio" name="likert1" value="1"> 非常困惑（完全不理解）</label>
         </div>
     </div>
     <div class="question-block">
         <label for="likert-q2">(b) 直行右轉號誌 + 黃色箭頭閃爍</label>
         <div class="options">
-            <label><input type="radio" name="likert2" value="1"> 非常困惑</label>
-            <label><input type="radio" name="likert2" value="2"> 有點困惑</label>
-            <label><input type="radio" name="likert2" value="3"> 普通</label>
-            <label><input type="radio" name="likert2" value="4"> 有點理解</label>
-            <label><input type="radio" name="likert2" value="5"> 非常理解</label>
+            <label><input type="radio" name="likert2" value="5"> 非常理解（完全理解）</label>
+            <label><input type="radio" name="likert2" value="4"> 有點理解（大致上理解）</label>
+            <label><input type="radio" name="likert2" value="3"> 中立（有些理解，也有些困惑）</label>
+            <label><input type="radio" name="likert2" value="2"> 有點困惑（不太理解）</label>
+            <label><input type="radio" name="likert2" value="1"> 非常困惑（完全不理解）</label>
         </div>
     </div>
     <div class="question-block">
         <label for="likert-q3">(c) 直行右轉號誌 + 綠色箭頭閃爍</label>
         <div class="options">
-            <label><input type="radio" name="likert3" value="1"> 非常困惑</label>
-            <label><input type="radio" name="likert3" value="2"> 有點困惑</label>
-            <label><input type="radio" name="likert3" value="3"> 普通</label>
-            <label><input type="radio" name="likert3" value="4"> 有點理解</label>
-            <label><input type="radio" name="likert3" value="5"> 非常理解</label>
+            <label><input type="radio" name="likert3" value="5"> 非常理解（完全理解）</label>
+            <label><input type="radio" name="likert3" value="4"> 有點理解（大致上理解）</label>
+            <label><input type="radio" name="likert3" value="3"> 中立（有些理解，也有些困惑）</label>
+            <label><input type="radio" name="likert3" value="2"> 有點困惑（不太理解）</label>
+            <label><input type="radio" name="likert3" value="1"> 非常困惑（完全不理解）</label>
         </div>
     </div>
     <div class="question-block">
         <label for="likert-q4">(d) 直行右轉號誌 + 綠色圓型閃爍</label>
         <div class="options">
-            <label><input type="radio" name="likert4" value="1"> 非常困惑</label>
-            <label><input type="radio" name="likert4" value="2"> 有點困惑</label>
-            <label><input type="radio" name="likert4" value="3"> 普通</label>
-            <label><input type="radio" name="likert4" value="4"> 有點理解</label>
-            <label><input type="radio" name="likert4" value="5"> 非常理解</label>
+            <label><input type="radio" name="likert4" value="5"> 非常理解（完全理解）</label>
+            <label><input type="radio" name="likert4" value="4"> 有點理解（大致上理解）</label>
+            <label><input type="radio" name="likert4" value="3"> 中立（有些理解，也有些困惑）</label>
+            <label><input type="radio" name="likert4" value="2"> 有點困惑（不太理解）</label>
+            <label><input type="radio" name="likert4" value="1"> 非常困惑（完全不理解）</label>
         </div>
     </div>
 
-<div class="question-block">
-    <label for="likert-q5">(e) 直行右轉號誌 + 綠色箭頭長亮</label>
-    <div class="options">
-        <label><input type="radio" name="likert5" value="1"> 非常困惑</label>
-        <label><input type="radio" name="likert5" value="2"> 有點困惑</label>
-        <label><input type="radio" name="likert5" value="3"> 普通</label>
-        <label><input type="radio" name="likert5" value="4"> 有點理解</label>
-        <label><input type="radio" name="likert5" value="5"> 非常理解</label>
+    <div class="question-block">
+        <label for="likert-q5">(e) 直行右轉號誌 + 綠色箭頭長亮</label>
+        <div class="options">
+            <label><input type="radio" name="likert5" value="5"> 非常理解（完全理解）</label>
+            <label><input type="radio" name="likert5" value="4"> 有點理解（大致上理解）</label>
+            <label><input type="radio" name="likert5" value="3"> 中立（有些理解，也有些困惑）</label>
+            <label><input type="radio" name="likert5" value="2"> 有點困惑（不太理解）</label>
+            <label><input type="radio" name="likert5" value="1"> 非常困惑（完全不理解）</label>
+        </div>
     </div>
-</div>
-<div class="question-block">
-    <label for="likert-q6">(f) 直行右轉號誌 + 綠色圓型長亮</label>
-    <div class="options">
-        <label><input type="radio" name="likert6" value="1"> 非常困惑</label>
-        <label><input type="radio" name="likert6" value="2"> 有點困惑</label>
-        <label><input type="radio" name="likert6" value="3"> 普通</label>
-        <label><input type="radio" name="likert6" value="4"> 有點理解</label>
-        <label><input type="radio" name="likert6" value="5"> 非常理解</label>
+    <div class="question-block">
+        <label for="likert-q6">(f) 直行右轉號誌 + 綠色圓型長亮</label>
+        <div class="options">
+            <label><input type="radio" name="likert6" value="5"> 非常理解（完全理解）</label>
+            <label><input type="radio" name="likert6" value="4"> 有點理解（大致上理解）</label>
+            <label><input type="radio" name="likert6" value="3"> 中立（有些理解，也有些困惑）</label>
+            <label><input type="radio" name="likert6" value="2"> 有點困惑（不太理解）</label>
+            <label><input type="radio" name="likert6" value="1"> 非常困惑（完全不理解）</label>
+        </div>
     </div>
-</div>
-<div class="question-block">
-    <label for="likert-q7">(g) 紅燈號誌 + 綠色箭頭長亮</label>
-    <div class="options">
-        <label><input type="radio" name="likert7" value="1"> 非常困惑</label>
-        <label><input type="radio" name="likert7" value="2"> 有點困惑</label>
-        <label><input type="radio" name="likert7" value="3"> 普通</label>
-        <label><input type="radio" name="likert7" value="4"> 有點理解</label>
-        <label><input type="radio" name="likert7" value="5"> 非常理解</label>
+    <div class="question-block">
+        <label for="likert-q7">(g) 紅燈號誌 + 綠色箭頭長亮</label>
+        <div class="options">
+            <label><input type="radio" name="likert7" value="5"> 非常理解（完全理解）</label>
+            <label><input type="radio" name="likert7" value="4"> 有點理解（大致上理解）</label>
+            <label><input type="radio" name="likert7" value="3"> 中立（有些理解，也有些困惑）</label>
+            <label><input type="radio" name="likert7" value="2"> 有點困惑（不太理解）</label>
+            <label><input type="radio" name="likert7" value="1"> 非常困惑（完全不理解）</label>
+        </div>
     </div>
-</div>
-<div class="question-block">
-    <label for="likert-q8">(h) 紅燈號誌 + 綠色圓型長亮</label>
-    <div class="options">
-        <label><input type="radio" name="likert8" value="1"> 非常困惑</label>
-        <label><input type="radio" name="likert8" value="2"> 有點困惑</label>
-        <label><input type="radio" name="likert8" value="3"> 普通</label>
-        <label><input type="radio" name="likert8" value="4"> 有點理解</label>
-        <label><input type="radio" name="likert8" value="5"> 非常理解</label>
+    <div class="question-block">
+        <label for="likert-q8">(h) 紅燈號誌 + 綠色圓型長亮</label>
+        <div class="options">
+            <label><input type="radio" name="likert8" value="5"> 非常理解（完全理解）</label>
+            <label><input type="radio" name="likert8" value="4"> 有點理解（大致上理解）</label>
+            <label><input type="radio" name="likert8" value="3"> 中立（有些理解，也有些困惑）</label>
+            <label><input type="radio" name="likert8" value="2"> 有點困惑（不太理解）</label>
+            <label><input type="radio" name="likert8" value="1"> 非常困惑（完全不理解）</label>
+        </div>
     </div>
-</div>
 
     <button id="submit-open-ended-button">提交並查看結果</button>
 </div>
