change instruction color

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <li>每題均為不同情境與不同號誌組合，其中包含現有號誌(不另外解釋)，以及引入獨立左轉號誌，說明如下表</li>
                 <li>進入題目頁面後，駕駛模擬影片會自動播放</li>
                 <li>影片播放前3秒號誌為全黑，3秒後依顯示號誌點擊選項按鈕作答</li>
-                <li><strong>請根據號誌所傳達的指令做選擇</strong></li>
+                <li><strong style="color: white;">請根據號誌所傳達的指令做選擇</strong></li>
             </ol>
     
             <table class="styled-table">
